sidebar: fixed spacing between settings items, reduced height of inline buttons

--- a/app/css/sidebar.css
+++ b/app/css/sidebar.css
@@ -44,7 +44,8 @@
     font-family: 'Consolas', 'Courier New';
   }
 
-  .sidebar .link {
+  .sidebar .button,
+  .sidebar .button-inline {
     display: inline-block;
 
     background-color: transparent;
@@ -59,11 +60,11 @@
     padding: 0 10px 0 7px;
   }
 
-    .sidebar .link:last-child {
+    .sidebar .button:last-child {
       margin-right: 0;
     }
 
-    .sidebar .link:active {
+    .sidebar .button:active {
       transform: translateY(2px);
     }
 
@@ -71,12 +72,20 @@
     word-wrap: break-word;
   }
 
+  .sidebar .button-inline {
+    line-height: 25px;
+    margin: 0 5px;
+  }
+
 /* Settings */
 
-.settings span {
-  left: 6em;
-  position: absolute;
+.settings td {
+  padding: 5px 0;
 }
+
+  .settings td:first-child {
+    padding-right: 10px;
+  }
 
 input[type=number] {
   width: 3.7em;
@@ -94,7 +103,7 @@ input[type=checkbox] {
   -moz-appearance: none;
 
   position: relative;
-  top: 6px;
+  top: 3px;
   width: 20px;
   height: 20px;
 
